hw_CRUD/dp_cm_CRUD.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usercrud
  labels:
    app: usercrud
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: usercrud
        image: daryakokoreva/usercrud
        ports:
        - containerPort: 8000
