hw_CRUD/service_CRUD.yaml
apiVersion: v1
kind: Service
metadata:
  name: usercrud-service
  labels:
    app: usercrud-app
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      name: metrics
      port: 80
      targetPort: 8000
  type: ClusterIP
