hw_CRUD/Ingress_CRUD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dasha-k8s-ig
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: dasha-k8s-sv
            port:
              number: 80
